Try to fix whitespace

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,11 @@
   <meta charset="utf-8">
   {% if conf.expires -%}
   <meta http-equiv="expires" content="{{ html.expires }}">
-  {%- endif %}
+  {%- endif -%}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% if conf.mobile[theme_color] -%}
   <meta name="theme-color" content="{{ html.theme-color }}">
-  {%- endif %}
+  {%- endif -%}
   <!--
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
