Add CSS base infrastructure

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   {% if conf.mobile[theme_color] -%}
   <meta name="theme-color" content="{{ html.theme-color }}">
   {%- endif -%}
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/main.css' | relative_url }}">
   <!--
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
