Use site.jekyll_wgdd.site_conf for site config

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-{%- assign conf = site.jekyll_wgdd -%}
+{%- assign conf = site.jekyll_wgdd.site_conf -%}
 <head>
   <meta charset="utf-8">
   {% if conf.expires -%}
