Add some debug variable

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,9 @@
 {%- assign conf = site.jekyll_wgdd.site_conf -%}
 <head>
   <meta charset="utf-8">
+  {% if conf.debug -%}
+  <meta name="date" content="{{ site.time | date_to_xmlschema }}">
+  {%- endif -%}
   {% if conf.expires -%}
   <meta http-equiv="expires" content="{{ html.expires }}">
   {%- endif -%}
