--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,14 +3,14 @@
   <meta charset="utf-8">
   {% if conf.debug -%}
   <meta name="date" content="{{ site.time | date_to_xmlschema }}">
-  {%- endif -%}
+  {% endif -%}
   {% if conf.expires -%}
   <meta http-equiv="expires" content="{{ conf.expires }}">
-  {%- endif -%}
+  {% endif -%}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% if conf.mobile.theme_color -%}
   <meta name="theme-color" content="{{ conf.mobile.theme_color }}">
-  {%- endif -%}
+  {% endif -%}
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/main.css' | relative_url }}">
   <!--
   <meta name="apple-mobile-web-app-capable" content="yes">
