--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title" id="page-label" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-">Published
-    {% if page.author -%}
+    {% if page.author or site.author -%}
       by
       <span class="post-author" itemscope itemtype="http://schema.org/Person" itemprop="author name">{{ page.author | default: site.author }}</span>
     {% endif -%}
