Add ARIA related markup and fix microdata

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,11 @@ layout: default
 
 {%- assign date_format = site.jekyll_wgdd.site_conf.date_format | default: "%Y-%m-%d %H:%M" -%}
 
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting" itemid="{{ site.url }}">
+<article class="post" aria-labelledby="post-title" itemscope itemtype="http://schema.org/BlogPosting" itemid="{{ site.url }}">
 
   <header class="post-header">
-    <h1 class="post-title" id="page-label" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-">Published
+    <h1 class="post-title" id="post-title" itemprop="headline">{{ page.title | escape }}</h1>
+    <p class="post-info" >Published
     {% if page.author or site.author -%}
       by
       <span class="post-author" itemscope itemtype="http://schema.org/Person" itemprop="author name">{{ page.author | default: site.author }}</span>
@@ -18,7 +18,7 @@ layout: default
     </p>
   </header>
 
-  <div class="post-content" itemprop="text articleBody">
+  <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
 
