Add aside and footer section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,4 +22,13 @@ layout: default
     {{ content }}
   </div>
 
+  <aside class="post-related" >
+    <!-- related posts -->
+  </aside>
+
+  <footer class="post-footer">
+    <!-- list of categories -->
+    <a class="post-url hidden-url" href="{{ page.url }}" itemprop="url" hidden>{{ page.url }}</a>
+  </footer>
+
 </article>
