--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+  {% include head.html %}
 
   <body>
 
-    {%- include page-header.html -%}
+    {% include page-header.html %}
 
     <main class="page-content" aria-label="Content" aria-labelledby="page-label">
       <div class="page-content-wrapper">
@@ -13,7 +13,7 @@
       </div>
     </main>
 
-    {%- include page-footer.html -%}
+    {% include page-footer.html %}
 
   </body>
 
