--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,11 +31,11 @@ layout: default
     <nav class="post-footer-navigation">
       <ul>
       {% if page.previous -%}
-        <li><a class="next-url"href="{{ page.previous.url | relative_url }}">{{ page.previous.title }}</a></li>
+        <li aria-label="Previous post"><a class="next-url"href="{{ page.previous.url | relative_url }}">{{ page.previous.title }}</a></li>
       {% endif -%}
-        <li><a class="post-url hidden-url" href="{{ page.url }}" itemprop="url" hidden>{{ page.url | absolute_url }}</a></li>
+        <li aria-label="Current post"><a class="post-url hidden-url" href="{{ page.url }}" itemprop="url" hidden>{{ page.url | absolute_url }}</a></li>
       {% if page.next -%}
-        <li><a class="next-url"href="{{ page.next.url | relative_url }}">{{ page.next.title }}</a></li>
+        <li aria-label="Next post"><a class="next-url"href="{{ page.next.url | relative_url }}">{{ page.next.title }}</a></li>
       {% endif -%}
       </ul>
     </nav>
