Use ARIA label on page header

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,4 +1,4 @@
-<header class="page-header" id="page-label">
+<header class="page-header" id="page-label" aria-label="Page title">
   <h1 class="page-title" id="page-title">{{ site.title }} :: {% if page.layout != 'post' -%}{{ page.title }}{%- else -%}Blog{%- endif -%}</h1>
   <span class="page-banner">
     <a href="http://www.debian.org" title="Debian GNU/Linux Project">
