Add a page layout including a TOC

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,14 @@
 layout: default
 ---
 
+<aside class="page-sidebar">
+  <nav class="page-toc" aria-labelledby="page-toc-label">
+    <header class="page-toc-header">
+      <h4 class="page-toc-label" id="page-toc-label">Site content</h4>
+    </header>
+    {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="page-toc-content" %}
+  </nav>
+</aside>
+
 {{ content }}
+
