Massive structrual change
Implement a first idea, how the design should be structured.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {% include page-header.html %}
+    {% include header.html %}
 
     <main class="page-content" aria-label="Content" aria-labelledby="page-label">
       <div class="page-content-wrapper">
@@ -13,7 +13,7 @@
       </div>
     </main>
 
-    {% include page-footer.html %}
+    {% include footer.html %}
 
   </body>
 
