Work on navigation
I think about two navigation items in the top header: a foldable one and a
visibale row one. The latter should contain a logo/link to the homepage and
some important entry points (plus a button), whereas the foldable one should
contain the site strcuture.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,13 @@
       <img src="http://www.debian.org/banners/debian.png" alt="Debian GNU/Linux Project - www.debian.org"/>
     </a>
   </span>
-</header>
 
-{% include navigation.html scope="sites" %}
+{% if site.data.navigation["folder"] %}
+{% include navigation.html scope="folder" %}
+{% endif %}
+
+{% if site.data.navigation["main"] %}
+{% include navigation.html scope="main" %}
+{% endif %}
+
+</header>
