Change the navigation layout
The main navigation should not be part of the header and the header might
contain a list of entry points.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,12 +6,12 @@
     </a>
   </span>
 
-{% if site.data.navigation["folder"] %}
-{% include navigation.html scope="folder" %}
+{% if site.data.navigation["head"] %}
+{% include navigation.html scope="head" %}
 {% endif %}
+
+</header>
 
 {% if site.data.navigation["main"] %}
 {% include navigation.html scope="main" %}
 {% endif %}
-
-</header>
