Rename data for header section navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
     </a>
   </span>
 
-{% if site.data.navigation["head"] %}
-{% include navigation.html scope="head" %}
+{% if site.data.navigation["header"] %}
+{% include navigation.html scope="header" %}
 {% endif %}
 
 </header>
