Try to fix non-working URL paths
Prepend the baseurl if the site is hosted at a sub-directory.

--- a/_includes/navigation-item.html
+++ b/_includes/navigation-item.html
@@ -15,7 +15,7 @@
 {%- elsif this_page.url -%}
   {%- assign this_url = this_page.url | relative_url -%}
 {%- elsif include.entry.url -%}
-  {%- assign this_url = include.entry.url -%}
+  {%- assign this_url = include.entry.url | relative_url -%}
 {%- endif -%}
 
 {%- comment -%} Determine title {%- endcomment -%}
