--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="page-header" id="page-label" aria-label="Page title">
-  <h1 class="page-title" id="page-title">{{ site.title }} :: {% if page.layout != 'post' -%}{{ page.title }}{%- else -%}Blog{%- endif -%}</h1>
+  <h1 class="page-title" id="page-title">{{ page.title }} :: {{ site.title }}</h1>
   <span class="page-banner">
     <a href="http://www.debian.org" title="Debian GNU/Linux Project">
       <img src="http://www.debian.org/banners/debian.png" alt="Debian GNU/Linux Project - www.debian.org"/>
