Add some class information to the structure

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<article>
+<article class="page-article" aria-labelledby="page-label">
 
-<header>
+<header class="page-article-header">
 <!-- headline -->
 </header>
 
@@ -12,7 +12,7 @@ layout: default
 
 {{ content }}
 
-<footer>
+<footer class="page-article-footer">
 <!-- footer, without include? maybe date? -->
 </footer>
 
