--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 
     {% include header.html %}
 
-    <main class="page-content" aria-label="Content" aria-labelledby="page-label">
-      <div class="page-content-wrapper">
+    <main class="page-main-content" aria-label="Content" aria-labelledby="page-label">
+      <div class="page-main-content-wrapper">
         {{ content }}
       </div>
     </main>
