--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,14 +5,14 @@ type: Blog
 
 {%- assign date_format = site.jekyll_wgdd.site_conf.date_format | default: "%Y-%m-%d %H:%M" -%}
 
-<article class="post" aria-labelledby="post-title" itemscope itemtype="http://schema.org/BlogPosting" itemid="{{ page.url | absolute_url }}">
+<article class="post" aria-labelledby="post-title" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting" itemid="{{ page.url | absolute_url }}">
 
   <header class="post-header">
     <h1 class="post-title" id="post-title" itemprop="headline">{{ page.title | escape }}</h1>
     <p class="post-info" >Published
     {% if page.author or site.author -%}
       by
-      <span class="post-author" itemscope itemtype="http://schema.org/Person" itemprop="author name">{{ page.author | default: site.author }}</span>
+      <span class="post-author" itemscope itemtype="http://schema.org/Person" itemprop="author"><span itemprop="name">{{ page.author | default: site.author }}</span></span>
     {% endif -%}
       at
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: date_format }}</time>
