--- a/_includes/page-toc.html
+++ b/_includes/page-toc.html
@@ -1,6 +1,7 @@
 <aside class="page-toc" aria-labelledby="page-toc-label">
   <nav class="page-toc-nav" aria-labelledby="page-toc-label">
     <header class="page-toc-header">
+      <button class="page-toc-label">Open Site TOC</button>
       <h4 class="page-toc-label" id="page-toc-label">Site content</h4>
     </header>
     {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="page-toc-content" %}
