--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,14 @@
 {% include navigation.html scope="header" %}
 {% endif %}
 
-  <h1 class="page-title" id="page-title">{{ page.title }} :: {{ site.title }}</h1>
+  <span class="page-title" id="page-title">{{ site.title }}</span>
+<!--
   <span class="page-banner">
     <a href="http://www.debian.org" title="Debian GNU/Linux Project">
       <img src="http://www.debian.org/banners/debian.png" alt="Debian GNU/Linux Project - www.debian.org"/>
     </a>
   </span>
+-->
 
 </header>
 
