--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ schema: WebPage
 <article class="page-article" aria-labelledby="page-label">
 
 <header class="page-article-header">
-<!-- headline -->
+<h1>{{ page.title }}</h1>
 </header>
 
 {% include page-toc.html %}
