Add some basic layout

--- a/_sass/jekyll-wgdd.scss
+++ b/_sass/jekyll-wgdd.scss
@@ -1,3 +1,7 @@
 /* Base CSS */
 
 @import "jekyll-wgdd/core";
+@import "jekyll-wgdd/header";
+@import "jekyll-wgdd/nav";
+@import "jekyll-wgdd/main";
+@import "jekyll-wgdd/footer";
