Add a link to the site title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 {% include navigation.html scope="header" %}
 {% endif %}
 
-  <span class="page-title" id="page-title">{{ site.title }}</span>
+  <span class="page-title" id="page-title"><a href="{{ site.url }}">{{ site.title }}</a></span>
 <!--
   <span class="page-banner">
     <a href="http://www.debian.org" title="Debian GNU/Linux Project">
