Use SCSS syntax and work on layout

--- a/_sass/jekyll-wgdd/_main.scss
+++ b/_sass/jekyll-wgdd/_main.scss
@@ -1,5 +1,9 @@
 main {
-  border: 1px solid green;
+  //border: 1px solid green;
   position: relative;
+  top: 70px;
   left: 10%;
+  z-index: 9000;
+  //background-color: #333333;
+  width: 80%;
 }
