--- a/_sass/jekyll-wgdd/_footer.scss
+++ b/_sass/jekyll-wgdd/_footer.scss
@@ -6,31 +6,34 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  border: 1px solid blue;
-}
+  background-color: #f0f0f0;
 
-.page-footer button {
-  display: none;
-}
+  button {
+    display: none;
+  }
 
-.page-footer small {
-  display: block;
-  float: right;
-}
+  small {
+    display: block;
+    float: right;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+  }
 
-.page-navigation-footer {
-  float: left;
-}
+  .page-navigation-footer {
+    float: left;
+  }
 
-ul.page-navigation-footer-list {
-  display: block;
-  list-style-type: none;
-  padding: 5px;
-  overflow: hidden;
-}
+  ul.page-navigation-footer-list {
+    display: block;
+    list-style-type: none;
+    padding: 5px;
+    overflow: hidden;
 
-ul.page-navigation-footer-list li {
-  display: inline-block;
-  padding: 5px;
-  border: 1px solid #f1f1f1;
+    li {
+      display: inline-block;
+      padding: 5px;
+      border: 1px solid #f0f0f0;
+    }
+  }
 }
