--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -1,10 +1,13 @@
 /* Core CSS */
 
+$page-background-color: #f0f0f0;
+$main-background-color: #ffffff;
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-color: #ffffff;
+  background-color: $main-background-color;
 }
