--- a/_sass/jekyll-wgdd/_footer.scss
+++ b/_sass/jekyll-wgdd/_footer.scss
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: $page-background-color;
 
   button {
     display: none;
@@ -33,7 +33,7 @@
     li {
       display: inline-block;
       padding: 5px;
-      border: 1px solid #f0f0f0;
+      //border: 1px solid $page-background-color;
     }
   }
 }
