--- a/_sass/jekyll-wgdd/_header.scss
+++ b/_sass/jekyll-wgdd/_header.scss
@@ -20,10 +20,10 @@
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
-    border: 1px solid #f0f0f0;
+    border: 1px solid $page-background-color;
     border-radius: 0 0 20px 20px;
     box-shadow: 5px 5px 2px 0 rgba(204,204,204,0.5);
-    background-image: linear-gradient(#f0f0f0, white);
+    background-image: linear-gradient($page-background-color, white);
     padding: 10px;
   }
 
@@ -37,8 +37,8 @@
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 10px;
-    //background-color: #f0f0f0;
-    background-image: linear-gradient(#f0f0f0, white);
+    //background-color: $page-background-color;
+    background-image: linear-gradient($page-background-color, white);
     width: 100%;
     text-align: right;
     height: 3em;
@@ -49,7 +49,7 @@
       list-style-type: none;
       color: blue;
       width: 100px;
-      //background-image: linear-gradient(#f0f0f0, white);
+      //background-image: linear-gradient($page-background-color, white);
 
       a {
         text-decoration: none;
