--- a/_sass/jekyll-wgdd/_main.scss
+++ b/_sass/jekyll-wgdd/_main.scss
@@ -4,6 +4,6 @@ main {
   top: 70px;
   left: 10%;
   z-index: 9000;
-  //background-color: #333333;
+  //background-color: $main-background-color;
   width: 80%;
 }
