--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -1,7 +1,8 @@
 /* Core CSS */
 
-$page-background-color: #f0f0f0;
-$main-background-color: #ffffff;
+$head-background-color: AliceBlue;
+$page-background-color: #ffffff;
+$foot-background-color: #f0f0f0;
 
 * {
   margin: 0;
@@ -9,5 +10,7 @@ $main-background-color: #ffffff;
 }
 
 body {
-  background-color: $main-background-color;
+  background-color: $page-background-color;
+  //background-image: linear-gradient($page-background-color, $foot-background-color);
+  //height: 100%;
 }
