--- a/_sass/jekyll-wgdd/_header.scss
+++ b/_sass/jekyll-wgdd/_header.scss
@@ -12,18 +12,23 @@
     display: none;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   .page-title {
     position: absolute;
-    left: 120px;
+    left: 15%;
     top: 0;
     width: 250px;
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
-    border: 1px solid $page-background-color;
+    border: 1px solid $head-background-color;
     border-radius: 0 0 20px 20px;
-    box-shadow: 5px 5px 2px 0 rgba(204,204,204,0.5);
-    background-image: linear-gradient($page-background-color, white);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    //box-shadow: 5px 5px 2px 0 rgba(204,204,204,0.5);
+    background-image: linear-gradient($head-background-color, $page-background-color);
     padding: 10px;
   }
 
@@ -37,8 +42,8 @@
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 10px;
-    //background-color: $page-background-color;
-    background-image: linear-gradient($page-background-color, white);
+    //background-color: $head-background-color;
+    background-image: linear-gradient($head-background-color, $page-background-color);
     width: 100%;
     text-align: right;
     height: 3em;
@@ -49,10 +54,9 @@
       list-style-type: none;
       color: blue;
       width: 100px;
-      //background-image: linear-gradient($page-background-color, white);
+      //background-image: linear-gradient($head-background-color, $page-background-color);
 
       a {
-        text-decoration: none;
         &:hover {
           font-style: oblique;
         }
