--- a/_sass/jekyll-wgdd/_main.scss
+++ b/_sass/jekyll-wgdd/_main.scss
@@ -3,7 +3,7 @@ main {
   position: relative;
   top: 70px;
   left: 10%;
-  z-index: 9000;
-  //background-color: $main-background-color;
+  z-index: 4000;
+  //background-color: $page-background-color;
   width: 80%;
 }
