--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -23,7 +23,8 @@ nav.page-navigation-main {
   ul.page-navigation-main-list {
     display: none;
     position: fixed;
-    background-color: #f0f0f0;
+    background-image: linear-gradient(to left, $foot-background-color, $page-background-color);
+    //background-color: $head-background-color;
     top: 0;
     left: 0;
     min-width: 10%;
@@ -31,7 +32,6 @@ nav.page-navigation-main {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 7000;
     height: 100%;
-    background-color: #f0f0f0;
 
     li {
       display: block;
