More work on the layout

--- a/_sass/jekyll-wgdd.scss
+++ b/_sass/jekyll-wgdd.scss
@@ -3,5 +3,6 @@
 @import "jekyll-wgdd/core";
 @import "jekyll-wgdd/header";
 @import "jekyll-wgdd/nav";
+@import "jekyll-wgdd/toc";
 @import "jekyll-wgdd/main";
 @import "jekyll-wgdd/footer";
