--- a/_sass/jekyll-wgdd/_header.scss
+++ b/_sass/jekyll-wgdd/_header.scss
@@ -4,11 +4,10 @@
   margin: 0;
   padding: 0;
   width: 100% !important;
-  position: relative;
+  position: absolute;
   height: 3em;
 
-  button,
-  img {
+  button {
     display: none;
   }
 
@@ -22,7 +21,7 @@
     top: 0;
     width: 250px;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bold;
     border: 1px solid $head-background-color;
     border-radius: 0 0 20px 20px;
@@ -50,13 +49,27 @@
 
     li {
       display: inline-block;
-      margin: 0;
+      margin: 0 5px;
+      padding: 5px 10px;
       list-style-type: none;
       color: blue;
-      width: 100px;
+      //width: 120px;
+      //font-size: 1.2em;
       //background-image: linear-gradient($head-background-color, $page-background-color);
 
+      //img {
+      //  height: 1.2em;
+      //}
+
       a {
+        text-decoration: none;
+
+        &[href*='paypal.me'] {
+          color: white;
+          background-color: limegreen;
+          padding: 10px;
+          text-align: center;
+        }
         &:hover {
           font-style: oblique;
         }
