--- a/_sass/jekyll-wgdd/_main.scss
+++ b/_sass/jekyll-wgdd/_main.scss
@@ -1,10 +1,11 @@
 main {
   //border: 1px solid green;
-  position: absolute;
-  padding-top: 5em;
-  margin-bottom: 5em;
+  position: relative;
+  padding-top: 1em;
+  //margin-bottom: 5em;
   left: 5%;
-  z-index: 4000;
+  z-index: $main-z-index;
   //background-color: $page-background-color;
   width: 90%;
+  overflow: auto;
 }
