--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -24,3 +24,8 @@ body {
   //background-image: linear-gradient($page-background-color, $foot-background-color);
   //height: 100%;
 }
+
+%header-box-shadow {
+  box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.4);
+  border: 1px solid $head-background-color;
+}
