--- a/_includes/page-toc.html
+++ b/_includes/page-toc.html
@@ -4,6 +4,9 @@
       <button class="page-toc-label">Open Site TOC</button>
       <h4 class="page-toc-label" id="page-toc-label">Site content</h4>
     </header>
-    {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="page-toc-content" %}
+    {% include toc.html sanitize=true html=content h_min=1 h_max=4 class="page-toc-content" %}
+    <ul class="page-toc-content">
+      <li><a href="#">Back to top</a></li>
+    </ul>
   </nav>
 </aside>
