Move TOC to make it sticky and add div around content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 
     {% include header.html %}
 
+    {% include page-toc.html %}
+
     <main class="page-main-content" aria-label="Content" aria-labelledby="page-label" itemprop="mainContentOfPage">
       <div class="page-main-content-wrapper">
         {{ content }}
