--- a/_sass/jekyll-wgdd/_footer.scss
+++ b/_sass/jekyll-wgdd/_footer.scss
@@ -3,9 +3,8 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  margin: 0;
-  padding: 0;
   width: 100%;
+  padding: $foot-padding-bottom 5px;
   background-image: linear-gradient($page-background-color, $foot-background-color);
   //background-color: $foot-background-color;
   z-index: $footer-z-index;
@@ -17,9 +16,7 @@
   small {
     display: block;
     float: right;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
+    padding: $foot-padding-bottom 0;
   }
 
   .page-navigation-footer {
