Introduce $foot-height variable

--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -17,6 +17,7 @@ $head-nav-padding-top: 10px;
 $nav-button-size: 40px;
 
 $foot-padding-bottom: $head-padding-top;
+$foot-height: 3em;
 
 * {
   margin: 0;
