--- a/_sass/jekyll-wgdd/_footer.scss
+++ b/_sass/jekyll-wgdd/_footer.scss
@@ -8,6 +8,7 @@
   background-image: linear-gradient($page-background-color, $foot-background-color);
   //background-color: $foot-background-color;
   z-index: $footer-z-index;
+  height: $foot-height;
 
   button {
     display: none;
