--- a/_sass/jekyll-wgdd/_main.scss
+++ b/_sass/jekyll-wgdd/_main.scss
@@ -1,6 +1,6 @@
 main {
   position: relative;
-  margin: 2em 15% 4em 12%;
+  margin: 2em 15% $foot-height + 1em 12%;
   z-index: $main-z-index;
   background-color: $page-background-color;
   overflow: hidden;
