--- a/_sass/jekyll-wgdd/_toc.scss
+++ b/_sass/jekyll-wgdd/_toc.scss
@@ -38,6 +38,13 @@ aside.page-toc {
       a {
         display: block;
         padding: 5px;
+        text-decoration: none;
+      }
+
+      a:hover {
+        //font-weight: bold;
+        text-decoration: underline;
+        transition: all 0.5s ease-in-out;
       }
 
       ul > li a {
