Make the top link a fixed button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {% include header.html -%}
 
     {% include page-toc.html -%}
+    {% include page-top.html -%}
 
     <main class="page-main-content" aria-label="Content" aria-labelledby="page-label" itemprop="mainContentOfPage">
       <div class="page-main-content-wrapper">
