--- a/_sass/jekyll-wgdd.scss
+++ b/_sass/jekyll-wgdd.scss
@@ -4,5 +4,6 @@
 @import "jekyll-wgdd/header";
 @import "jekyll-wgdd/nav";
 @import "jekyll-wgdd/toc";
+@import "jekyll-wgdd/top";
 @import "jekyll-wgdd/main";
 @import "jekyll-wgdd/footer";
