--- a/_sass/jekyll-wgdd/_core.scss
+++ b/_sass/jekyll-wgdd/_core.scss
@@ -9,6 +9,7 @@ $head-background-color: #f0f0f0; //AliceBlue;
 $page-background-color: rgba(255,255,255,0.8);
 $nav-background-color:  $head-background-color;
 $foot-background-color: $head-background-color;
+$highligher-background-color: Azure;
 
 $head-height: 4em;
 $head-padding-top: 10px;
