--- a/_sass/jekyll-wgdd/_main.scss
+++ b/_sass/jekyll-wgdd/_main.scss
@@ -5,21 +5,34 @@ main {
   background-color: $page-background-color;
   overflow: hidden;
   min-width: 60%;
+  box-shadow: 0px 4px 8px 4px #ccc;
+  padding: 10px;
 
   .page-article-content {
     align: center;
     width: auto;
     font-size: 1.2em;
     line-height: 1.2em;
-  }
 
-  h1, h2, h3, h4, h5, h6 {
-    position: -webkit-sticky;
-    position: sticky;
-    top: -1px;
-    color: #666;
-    background-color: $head-background-color;
-  }
+    > * {
+      padding: 5px 5px 1em 5px;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      position: -webkit-sticky;
+      position: sticky !important;
+      top: -1px;
+      //color: #666;
+      //background-color: $head-background-color;
+      margin: 1.5em 0 1em 0;
+      padding-bottom: 5px;
+    }
+
+    h1 {
+      margin-top: 0.5em;
+      background-color: $head-background-color;
+    }
+ }
 
   pre {
     overflow-x: auto;
